# litstudy

./: .buildinfo  .gitignore  .requirements  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  bigrams.txt  citation.html  example.html  example.ipynb  faq.html  genindex.html  index.html  installation.html  license.html  literature_analysis.ipynb  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties  stemming.txt  stopwords.txt
.github/workflows/: docs.yml  python-action.yml  python-app.yml  python-format.yml
_sources/: example.ipynb.txt  faq.rst.txt  index.rst.txt  installation.rst.txt
_sources/api/: index.rst.txt  plot.rst.txt  sources.rst.txt
_static/: citation.html  documentation_options.js
_static/css/: style.css
api/: index.html  network.html  nlp.html  plot.html  sources.html  stats.html  types.html
doc/: .conf.py.swp  conf.py  example.ipynb
doc/api/: index.rst  network.rst
doc/source/: conf.py  index.rst
docs/: citation.html  conf.py  faq.rst  index.rst  installation.rst
docs/api/: nlp.rst  sources.rst  types.rst
litstudy/: __init__.py  clean.py  common.py  continent.py  network.py  nlp.py  plot.py  scopus.py  search.py  stats.py  stopwords.py  types.py
litstudy/sources/: __init__.py  arxiv.py  bibtex.py  crossref.py  csv.py  (+8 more)
notebooks/: chapter.ipynb  citation.html  example.ipynb
source/: index.html
test/: test_sources_ieee.py  test_sources_semanticscholar.py
tests/: common.py  conftest.py  test_common.py  test_nlp_corpus.py  test_sources_arxiv.py  test_sources_crossref.py  test_sources_csv.py  test_sources_ieee.py  test_sources_ris.py  test_sources_scopus_csv.py  test_sources_semanticscholar.py  test_sources_springer.py
(+25 files in other folders)
