[metadata]
name = litstudy
version = 1.0.5
author = Stijn Heldens
author_email = s.heldens@esciencecenter.nl
description =  Using the power of Python and Jupyter notebooks to automate analysis of scientific literature
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nlesc/litstudy
project_urls =
    Bug Tracker = https://github.com/nlesc/litstudy/issues
license = Apache 2.0
license_files = LICENSE


[options]
python_requires = >=3.7
packages = find:
install_requires =
    bibtexparser
    gensim
    matplotlib
    networkx
    numpy
    pandas
    pybliometrics
    pyvis
    requests
    seaborn
    scikit-learn
    unidecode
    wordcloud
    feedparser

[options.extras_require]
doc = sphinx_rtd_theme; nbsphinx; wheel

[options.packages.find]
include = litstudy, litstudy.*
